first partially working overwork of the toJson classes